<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mapbook</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="title_activity_create_location">CreateLocation</string>
    <string name="title_activity_create_path">CreatePath</string>
    <string name="login_activity">Login</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="parse_application_id">YyN0pW0gRrPy4vQYebW86IT03bYysrQZi8n5XkfC</string>
    <string name="parse_client_key">AjGE0VZly2K7Qja72nmAgQa0JAt02zpZPWlCN48g</string>
    
    <!-- LOGIN/REGISTER UI -->
    <string name="login_logo">Map Book.</string>
    <string name="register_logo">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_login">Invalid username/password.</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="signup_with_facebook">Sign Up with Facebook</string>

</resources>
