<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    tools:context="com.mapbook.ui.Login" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login_logo"
            style="@style/wrap"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="none"
            android:padding="20dp"
            android:text="@string/login_logo"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/login_username"
            style="@style/textbox"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/login_logo"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/login_password"
            style="@style/textbox"
            android:layout_below="@+id/login_username"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_message"
            style="@style/wrap"
            android:layout_below="@+id/login_password"
            android:layout_centerHorizontal="true"
            android:text="@string/invalid_login"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#F00"
            android:visibility="invisible" />

        <Button
            android:id="@+id/login_submit"
            android:layout_below="@+id/login_password"
            style="@style/button"
            android:layout_marginTop="25sp"
            android:text="@string/login" />

        <ProgressBar
            android:id="@+id/login_loading"
            android:layout_below="@+id/login_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30sp"
            android:visibility="gone"
      android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/login_register"
            style="@style/button"
            android:layout_below="@+id/login_submit"
            android:text="@string/register" />

        <ProgressBar
            android:id="@+id/login_loading_register"
            android:layout_below="@+id/login_submit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10sp"
            android:visibility="gone"
      android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_below="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</ScrollView>
